# SOONDRONE-GCS

./: .gitignore  README.md  docker-compose.yml
admin-dashboard/: .env.example  Dockerfile  package.json
admin-dashboard/public/: index.html
admin-dashboard/src/: App.jsx  index.js
admin-dashboard/src/api/: auth.js  client.js  drones.js  missions.js  telemetry.js
admin-dashboard/src/hooks/: useAuth.js  useDrones.js  useMissions.js
admin-dashboard/src/store/: index.js
admin-dashboard/src/store/slices/: authSlice.js  droneSlice.js  missionSlice.js
admin-dashboard/src/styles/: index.css
backend/: .env.example  Dockerfile  package.json
backend/src/: server.js
backend/src/controllers/: authController.js  droneController.js  missionController.js  telemetryController.js  userController.js
backend/src/models/: Drone.js  Mission.js  TelemetryLog.js  User.js
backend/src/routes/: auth.js  drones.js  missions.js  telemetry.js  users.js
docs/: API_SPEC.md  ARCHITECTURE.md  SETUP_GUIDE.md
gcs-android/: CMakeLists.txt
gcs-android/qml/: CameraView.qml  ControlPanel.qml  DashboardView.qml  MainWindow.qml  MapView.qml  SettingsPanel.qml
gcs-android/resources/: qml.qrc
gcs-android/src/: main.cpp
gcs-android/src/core/: mavlink_handler.cpp  mavlink_handler.h  mission_planner.cpp  mission_planner.h  telemetry_manager.cpp  telemetry_manager.h  vehicle_controller.cpp  vehicle_controller.h
scripts/: seed_database.sql  setup.sh
